--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,27 @@ SQLAlchemy==2.0.36
 starlette==0.40.0
 typing_extensions==4.12.2
 uvicorn==0.32.0
+annotated-types==0.7.0
+anyio==4.6.2.post1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+exceptiongroup==1.2.2
+fastapi==0.115.2
+h11==0.14.0
+idna==3.10
+Naked==0.1.32
+psycopg2-binary==2.9.10
+pydantic==2.9.2
+pydantic-settings==2.6.0
+pydantic_core==2.23.4
+python-dotenv==1.0.1
+PyYAML==6.0.2
+requests==2.32.3
+shellescape==3.8.1
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+starlette==0.40.0
+typing_extensions==4.12.2
+urllib3==2.2.3
+uvicorn==0.32.0
